// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="default"
  id="default"
/>
`;

exports[`Render default-two-items - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="default-two-items"
  id="default-two-items"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    one
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    two
  </div>
</div>
`;

exports[`Render properties.direction is column - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: visible;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is column"
  id="properties.direction is column"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    one
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    two
  </div>
</div>
`;

exports[`Render properties.direction is row - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: visible;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row"
  id="properties.direction is row"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    one
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    two
  </div>
</div>
`;

exports[`Render properties.direction is row and with wrap - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: visible;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row and with wrap"
  id="properties.direction is row and with wrap"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    1
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    2
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    3
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    4
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    5
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    6
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    7
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    8
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    9
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    10
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    11
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    12
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    13
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    14
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    15
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    16
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    17
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    18
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    19
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    20
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    21
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    22
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    23
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    24
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    25
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    26
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    27
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    28
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    29
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    30
  </div>
</div>
`;

exports[`Render properties.direction is row with default wrap - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: visible;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row with default wrap"
  id="properties.direction is row with default wrap"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    1
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    2
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    3
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    4
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    5
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    6
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    7
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    8
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    9
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    10
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    11
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    12
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    13
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    14
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    15
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    16
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    17
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    18
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    19
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    20
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    21
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    22
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    23
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    24
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    25
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    26
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    27
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    28
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    29
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    30
  </div>
</div>
`;

exports[`Render properties.direction is row with no wrap - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: visible;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row with no wrap"
  id="properties.direction is row with no wrap"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    1
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    2
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    3
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    4
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    5
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    6
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    7
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    8
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    9
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    10
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    11
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    12
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    13
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    14
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    15
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    16
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    17
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    18
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    19
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    20
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    21
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    22
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    23
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    24
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    25
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    26
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    27
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    28
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    29
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    30
  </div>
</div>
`;

exports[`Render properties.direction is row with no wrap and scroll - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: auto;
  width: 950px;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row with no wrap and scroll"
  id="properties.direction is row with no wrap and scroll"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    1
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    2
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    3
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    4
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    5
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    6
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    7
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    8
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    9
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    10
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    11
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    12
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    13
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    14
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    15
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    16
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    17
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    18
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    19
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    20
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    21
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    22
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    23
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    24
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    25
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    26
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    27
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    28
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    29
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    30
  </div>
</div>
`;

exports[`Render properties.direction is row with no wrap and scroll false - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: visible;
  width: 950px;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row with no wrap and scroll false"
  id="properties.direction is row with no wrap and scroll false"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    1
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    2
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    3
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    4
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    5
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    6
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    7
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    8
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    9
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    10
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    11
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    12
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    13
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    14
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    15
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    16
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    17
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    18
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    19
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    20
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    21
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    22
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    23
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    24
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    25
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    26
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    27
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    28
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    29
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    30
  </div>
</div>
`;

exports[`Render properties.direction is row with wrap-reverse - value[0] 1`] = `
.emotion-0 {
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap-reverse;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  overflow: visible;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.direction is row with wrap-reverse"
  id="properties.direction is row with wrap-reverse"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    1
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    2
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    3
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    4
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    5
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    6
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    7
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    8
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    9
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    10
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    11
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    12
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    13
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    14
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    15
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    16
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    17
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    18
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    19
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    20
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    21
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    22
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    23
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    24
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    25
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    26
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    27
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    28
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    29
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    30
  </div>
</div>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  outline: none;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.style"
  id="properties.style"
/>
`;

exports[`Render properties.style-two-items - value[0] 1`] = `
.emotion-0 {
  outline: none;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.style-two-items"
  id="properties.style-two-items"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    one
  </div>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    two
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema default-two-items 1`] = `true`;

exports[`Test Schema default-two-items 2`] = `null`;

exports[`Test Schema properties.direction is column 1`] = `true`;

exports[`Test Schema properties.direction is column 2`] = `null`;

exports[`Test Schema properties.direction is row 1`] = `true`;

exports[`Test Schema properties.direction is row 2`] = `null`;

exports[`Test Schema properties.direction is row and with wrap 1`] = `true`;

exports[`Test Schema properties.direction is row and with wrap 2`] = `null`;

exports[`Test Schema properties.direction is row with default wrap 1`] = `true`;

exports[`Test Schema properties.direction is row with default wrap 2`] = `null`;

exports[`Test Schema properties.direction is row with no wrap 1`] = `true`;

exports[`Test Schema properties.direction is row with no wrap 2`] = `null`;

exports[`Test Schema properties.direction is row with no wrap and scroll 1`] = `true`;

exports[`Test Schema properties.direction is row with no wrap and scroll 2`] = `null`;

exports[`Test Schema properties.direction is row with no wrap and scroll false 1`] = `true`;

exports[`Test Schema properties.direction is row with no wrap and scroll false 2`] = `null`;

exports[`Test Schema properties.direction is row with wrap-reverse 1`] = `true`;

exports[`Test Schema properties.direction is row with wrap-reverse 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;

exports[`Test Schema properties.style-two-items 1`] = `true`;

exports[`Test Schema properties.style-two-items 2`] = `null`;

exports[`register list methods on mount 1`] = `
.emotion-0 {
  outline: none;
  test: 1px;
}

<div
  class="emotion-0"
  data-testid="update"
  id="update"
>
  <div
    style="border: 1px solid red; padding: 10px;"
  >
    one
  </div>
</div>
`;

exports[`register list methods on mount 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "pushItem",
      [MockFunction],
    ],
    Array [
      "unshiftItem",
      [MockFunction],
    ],
    Array [
      "removeItem",
      [MockFunction],
    ],
    Array [
      "moveItemDown",
      [MockFunction],
    ],
    Array [
      "moveItemUp",
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`triggerEvent onClick 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="one"
  id="one"
/>
`;
